tests/golden/diagnostics/002_parse_unclosed_block.txt
E-SYNTAX tests/golden/diagnostics/002_parse_unclosed_block.suay:3:1: syntax error: Expected ⟫ to close block (got EOF)

^
